Fix verified badge going behind title

--- a/themes/internewscar/css/_default.css
+++ b/themes/internewscar/css/_default.css
@@ -246,7 +246,7 @@ div#main { padding:15px 10px; }
 
 .left-col h1.report-title { float:left; position:absolute; top:-18px; left:-18px; padding:5px; border:7px solid #fff; background:#529bf5; color:#fff; }
 
-.report_detail .r_verified { position:absolute; top:10px; right:18px;  }
+.report_detail .r_verified { position:absolute; top:30px; right:18px;  }
 
 div.report-additional-reports { background:#EEEDEA; position:relative; padding:35px 10px 10px; margin-left:18px; }
 div.report-additional-reports h4 { position:absolute; float:left; top:-18px; left:-18px; padding:5px; border:7px solid #fff; background:#529bf5; color:#fff; }
